2011-12-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcleanup.pl, server-src/amcleanupdisk.pl: use 
	  Amanda::Debug.

2011-12-05  Jean-Louis Martineau <martineau@zmanda.com>
	Fix for previous patch.
	* application-src/amlog-script.pl, application-src/ampgsql.pl,
	  application-src/amraw.pl, application-src/amsamba.pl,
	  application-src/amsuntar.pl, application-src/amzfs-sendrecv.pl,
	  application-src/amzfs-snapshot.pl,
	  application-src/script-email.pl: Undo previous patch,
	* perl/Amanda/Script_App.pm: Do it here instead.
	  server-src/amlogroll.pl, server-src/amvault.pl
	  server-src/taper.pl: Import the debug method.
	* server-src/amoverview.pl, server-src/amserverconfig.pl,
	  server-src/amstatus.pl: Undo previous patch, they do not use the
	  debug file.

2011-12-05  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amlog-script.pl, application-src/ampgsql.pl,
	  application-src/amraw.pl, application-src/amsamba.pl,
	  application-src/amsuntar.pl, application-src/amzfs-sendrecv.pl,
	  application-src/amzfs-snapshot.pl, application-src/script-email.pl,
	  client-src/amdump_client.pl, common-src/amgetconf.pl,
	  device-src/amdevcheck.pl, device-src/amtapetype.pl,
	  server-src/amcheckdump.pl, server-src/amcleanup.pl,
	  server-src/amcleanupdisk.pl, server-src/amdump.pl,
	  server-src/amfetchdump.pl, server-src/amlabel.pl,
	  server-src/amlogroll.pl, server-src/amoverview.pl,
	  server-src/amreport.pl, server-src/amrestore.pl,
	  server-src/amrmtape.pl, server-src/amserverconfig.pl,
	  server-src/amstatus.pl, server-src/amtape.pl,
	  server-src/amvault.pl,
	  server-src/taper.pl: Print command line arguments to debug file.

2011-12-05  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/device.c, device-src/ndmp-device.c,
	  device-src/tape-device.c: Call device_set_error if setting a
	  property fail.
	* perl/Amanda/Changer.pm: Use device error message.

2011-12-02  Jean-Louis Martineau <martineau@zmanda.com>